# 2026-ILTCI

./: .gitignore  README.md  config.yaml  pyproject.toml
app/: README.md  __init__.py  app.py  bootstrap.py  config.yaml  config_loader.py  config_potx.yaml  config_test.yaml  constants.py  state.py
app/components/: __init__.py  advanced_settings.py  assets_source.py  content_source.py  download_section.py  generate_button.py  output_config.py  style_overrides.py  template_source.py
app/services/: __init__.py  assets_service.py  generation_service.py
app/utils/: __init__.py  fs_safety.py
assets/: iltci-theme.css  image-layout.css  layout-specs.yaml  styles.yaml  template-config.yaml
configs/: config.yaml  style-overrides.yaml
content/: slides.md  slides_potx.md
docs/: IMAGE_STYLING_GUIDE.md  README_STYLING.md
scripts/: add_layouts.py  create_template.py  inspect_template.py
src/: generate_pptx.py
src/iltci_pptx/: __init__.py  cli.py  config.py  generator.py  html_media.py  images.py  layout_discovery.py  markdown_parser.py  placeholder_resolver.py  rich_text.py  slide_builders.py
templates/: template.potx  template.pptx
